arc-script/arc-script-test/compile/src/tests/expect-fail/test-file-not-found.stderr
error: custom attribute panicked
 --> $DIR/test-file-not-found.rs:2:1
  |
2 | #[arc_script::compile("nonexistent-file.arc")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: File not found: Os { code: 2, kind: NotFound, message: "No such file or directory" }

error: aborting due to previous error

